source/sass/progressbar.scss
@use "./variables.scss" as *;

.mod-frontend-form__layout {
    display: flex;

    /* Dusable visibility for scroollbars */
    .mod-frontend-form__progressbar {
        scrollbar-width: none;
    }
    .mod-frontend-form__progressbar:hover {
        scrollbar-width: thin;
    }
    .mod-frontend-form__progressbar::-webkit-scrollbar {
        height: 0;
    }
    .mod-frontend-form__progressbar:hover::-webkit-scrollbar {
        height: 6px;
    }
    .mod-frontend-form__progressbar::-webkit-scrollbar-track {
        background: transparent;
    }
    
    .mod-frontend-form__progressbar .mod-frontend-form__progressbar-step {
        min-width: max(calc(var(--base, 8px) * 24), 33.333%);
    }

    @container (width > 800px) {
        flex-direction: row;

        .mod-frontend-form__progressbar {
            padding: calc(var(--base, 8px) * 3) calc(var(--base, 8px) * 2);
            display: flex;
            flex-direction: column;
            justify-content: flex-start;
            align-items: stretch;
            flex: 0 0 300px;
            width: 300px;
            border-bottom: none;
            border-right: 1px solid $color-border;
            height: 100%;
            overflow-y: auto;

            .mod-frontend-form__progressbar-step {
                flex-grow: unset;
            }
        }

        .mod-frontend-form__content {
            flex: 1 1 auto;
            min-width: 0;
        }

        .mod-frontend-form__progressbar-divider {
            display: none;
        }
    }

    @container (width < 600px) {
        .mod-frontend-form__progressbar-step-button {
            display: none !important;
        }
    }

    @container (width > 500px) and (width <= 800px) {
        .mod-frontend-form__progressbar {
            padding: 0 calc(var(--base, 8px) * 3);
        }
    }

    @container (width <= 800px) {
        flex-direction: column;

        .mod-frontend-form__progressbar-wrapper {
            position: relative;

            &:before,
            &:after {
                content: "";
                position: absolute;
                top: 0;
                height: 100%;
                z-index: 1000;
                width: calc(var(--base, 8px) * 2);
                background: linear-gradient(90deg,rgb(255, 255, 255) 0%, rgba(255, 255, 255, 0) 100%);
            }

            &::before {
                left: 0;
            }

            &::after {
                right: 0;
                transform: rotate(180deg);
            }
        }

        .mod-frontend-form__progressbar {
            display: flex;
            flex-direction: row;
            width: 100%;
            border-bottom: 1px solid $color-border;
            position: relative;
            overflow-x: auto;
        }

        .mod-frontend-form__progressbar-divider {
            align-self: center;
            margin: 0;
            padding: 0;
            height: calc(var(--base, 8px) * 3);
            width: calc(var(--base, 8px) * 3);
        }
    }
}

.mod-frontend-form__progressbar {
    display: flex;
    justify-content: space-evenly;
    padding: 0;
    margin: 0;
    list-style: none;
    flex: 1;
    align-items: stretch;
    flex-wrap: nowrap;
    scroll-behavior: smooth;
}

.mod-frontend-form__progressbar-step--vertical {
    flex-direction: column;
    border-right: 1px solid $color-border;
    border-bottom: none;
}

.mod-frontend-form__progressbar-step {
    position: relative;
    display: flex;
    pointer-events: none;
    padding: calc(var(--base, 8px) * 2);
    gap: calc(var(--base, 8px) * 1);
    background-color: #fff;
    flex-grow: 1;
    align-items: center;

    --c-icon-size-lg: calc(var(--base, 8px) * 5);

    .mod-frontend-form__progressbar-step-title {
        overflow: hidden;
        text-overflow: ellipsis;
        white-space: nowrap;
        max-width: calc(100% - var(--base, 8px) * 4);
    }

    .mod-frontend-form__progressbar-step-button {
        background-color: var(--step-background-color-icon);
        color: var(--step-background-color-icon-contrast);
    }

    .mod-frontend-form__progressbar-step-button {
        display: flex;
        justify-content: center;
        align-items: center;
        width: var(--c-icon-size-lg);
        height: var(--c-icon-size-lg);
        aspect-ratio: 1 / 1;
        border-radius: 50%;
        border: none;

        --step-background-color-icon: #eee;
        --step-background-color-icon-contrast: #000;
    }

    .mod-frontend-form__progressbar-step-status-icon {
        display: none;
        margin-left: auto;
        justify-self: top;
    }

    .mod-frontend-form__progressbar-step-content {
        max-width: 100%;
        width: 100%;
    }

    /* Status styles */
    &:is(.is-invalid, .is-valid, .is-active) {
        pointer-events: auto;
        cursor: pointer;

        .mod-frontend-form__progressbar-step-button {
            background-color: var(--step-background-color-icon);
        }
        .mod-frontend-form__progressbar-step-button-icon {
            color: var(--step-background-color-icon-contrast);
        }
    }
   
    &.has-passed {
        .mod-frontend-form__progressbar-step-button {
            --step-background-color-icon: var(--color-dark, #707070);
            --step-background-color-icon-contrast: var(--color-dark-contrast, #ffffff);
        }
    }

    &.is-active {
        .mod-frontend-form__progressbar-step-button {
            --step-background-color-icon: var(--color-primary, #3333ff);
            --step-background-color-icon-contrast: var(--color-primary-contrast, #ffffff);
        }

        @container (width < 600px) {
            .mod-frontend-form__progressbar-step-title {
                text-decoration: underline;
            }
        }
    }

    &:not(.is-active) {
        @container (width < 600px) {
            opacity: 0.6;
        }
    }

    &.is-valid .mod-frontend-form__progressbar-step-status-icon-ok {
        display: block;
        color: var(--color-success, #91d736);
    }

    &.is-invalid .mod-frontend-form__progressbar-step-status-icon-error {
        display: block;
        color: var(--color-danger, #d73740);
    }
}

